--- a/style.css
+++ b/style.css
@@ -23,3 +23,10 @@
         margin-left: auto;
         margin-right: auto;
 }
+
+.navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+}
